--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 .board-container {
-    background-color: cadetblue;
+    background-color: rgb(246, 255, 255);
     width: 600px;
     height: 600px;
     display: grid;
