--- a/style.css
+++ b/style.css
@@ -8,12 +8,19 @@ body {
 }
 
 .board-container {
-    background-color: rgb(246, 255, 255);
+    background-color: rgb(65, 78, 78);
     width: 600px;
     height: 600px;
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(6, 1fr);
     grid-gap:10px;
-
+    padding: 20px;
+    border-radius: 20px;
+}
+.board-container > * {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
 }
